5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1613_1801.log
== TEST (2019-05-01 18:29:10) 
-- CODE:
r=input("Digite o nome do objeto:")
t=int(input("Digite as repetições:"))
v="abra+t*r"
print(v)

-- OUTPUT:
abra+t*r
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:42:34) 
-- CODE:
r=input("Digite o nome do objeto:")
t=int(input("Digite as repeticoes:"))
v=abra+t*r
print(v)

-- EXECUTION TIME:
0.1884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    v=abra+t*r
NameError: name 'abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:42:36) 
-- CODE:
r=input("Digite o nome do objeto:")
t=int(input("Digite as repeticoes:"))
v=abra+t*r
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    v=abra+t*r
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:53:28) 
-- CODE:
r=input("Digite o nome do objeto:")
t=int(input("Digite as repeticoes:"))
v=("abra"+r)*t
print(v)

-- EXECUTION TIME:
0.18712
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarroabracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:53:32) 
-- CODE:
r=input("Digite o nome do objeto:")
t=int(input("Digite as repeticoes:"))
v=("abra"+r)*t
print(v)

-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:56:44) 
-- CODE:
r=input("Digite o nome do objeto:")
t=int(input("Digite as repeticoes:"))
v=(" abra "+r)*t
print(v)

-- EXECUTION TIME:
0.220098
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:56:46) 
-- CODE:
r=input("Digite o nome do objeto:")
t=int(input("Digite as repeticoes:"))
v=(" abra "+r)*t
print(v)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:57:30) 
-- CODE:
r=input("Digite o nome do objeto:")
t=int(input("Digite as repeticoes:"))
v=(" Abra "+r)*t
print(v)

-- EXECUTION TIME:
0.134933
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
